--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "LGgame",
   "license": "ISC",
   "dependencies": {
-    "discord.js": "^12.3.1"
+    "discord.js": "^12.3.1",
+    "ms": "^2.1.2"
   }
 }
